Fixed holes in CSG output.  Removed some debug code.